2005-06-09  Steven Borley <steven.borley@virgin.net>

  *  Fixed *# command operation (src/frontend/inp.c)
  
  *  Added 'hack' to allow the 'numparams' variable to be set (or unset) before
     the netlist part of a file is parsed. This is based on code supplied by
     Dietmar Warning, with  changes to allow it to work with the *# syntax, the
     unset keyword and variable amounts of white space. (src/frontend/inp.c)
     
  *  line_free(line,flag) is now a macro so that line is set to NULL when it is
     freed. (src/frontend/inp.c) This is a safty mechnism.

2005-05-31  Steven Borley <steven.borley@virgin.net>

  *  Applied fix for logging supplied by Dietmar Warning (src/main.c)
  
  *  Miscellaneous tidying in src.main.c for format, indentation, #include
     style ("" vis-a-vis <>)  and removal of some compile time warnings.

2005-05-30  Steven Borley <steven.borley@virgin.net>
  
  *  Corrected return types (where necessary) for the functions that make up the
     devices[] array initialised in src/frontend/display.c, and used specific
     #includes rather than extern references. Added new headers as required.
     
  *  Moved jbuf from src/main.c to src/frontend/signal_handler.c 
  
  *  Tidy up of the header files in src/frontend and sub-directories. Motivation
     is to remove extern declarations within .c files and place in .h files. New
     header files where necessary.

2005-05-28  Steven Borley <steven.borley@virgin.net>

  *  Fix bug introduced in my last change. Fix supplied by Hitoshi Tanaka.
     Bug can cause a segmentation fault.
     
  *  Fixed the format of section 5.3.37. Save* in src/ngsoice.txt
  
  *  In src/frontend/plotting replaced extern references in .c files wiith
     #include of suitable header files.
    
  *  Added src/frontend/numparam/numpaif.h for the external interface to the
     numparam library.

2005-05-26  Steven Borley <steven.borley@virgin.net>
